# PyCoCoContactLib

./: README.md  pcfrbf_contact_dev_plan.md  pyproject.toml  pytest.ini  setup.cfg
PyCoCoContactLib/: __init__.py  quadrature.py
PyCoCoContactLib/api/: adapter.py  contact_solver.py  demo_utils.py
PyCoCoContactLib/core/: bvh.py  geometry.py  mesh.py  sphere.py
PyCoCoContactLib/detection/: active_faces.py  broad_phase.py  narrow_phase.py  sampling.py
PyCoCoContactLib/force/: calculator.py  integrator.py  models.py
PyCoCoContactLib/io/: mesh_io.py  obj_loader.py
PyCoCoContactLib/utils/: transforms.py  validation.py
PyCoCoContactLib/visualization/: contact_plotter.py  pyvista_backend.py
demos/: demo_contact_viz.py  demo_contact_viz_interactive.py  demo_drop.py  optimized_generalized_alpha.py
docs/: migration.md  rollback.md
models/: Cylinder.step  ball.step  cube.step  ellipsoid.step
models/ballMesh/: mesh_drop_results_rapid_verlet_damped.csv
outputs/output_ballMesh_20251118_235908/: perf_metrics.csv
outputs/output_ballMesh_20251119_000458/: perf_metrics.csv
outputs/output_ballMesh_20251119_002610/: perf_metrics.csv
outputs/output_ballMesh_20251119_003048/: mesh_drop_results.csv  perf_metrics.csv
outputs/output_ballMesh_20251119_004447/: perf_metrics.csv
post/: plot_perf_pie.py
rcsim/: __init__.py
rcsim/contact/: __init__.py  (+5 more)
scripts/: compare_csv.py
tests/: test_adapter.py  test_bvh_pose_update.py  test_contactlib_unittest.py  test_models_contact_visualize.py
verifications/: contact_optimization_multi_step.py  simple_contact_test.py
(+33 files in other folders)
