[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCoCoContactLib"
version = "1.0.0"
description = "Modular contact detection and force computation library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "black",
  "mypy",
]
