[metadata]
name = PyCoCoContactLib
version = 1.0.0
description = Modular contact detection and force computation library
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20

[options.packages.find]
include =
    PyCoCoContactLib*
    contactlib*

[options.extras_require]
dev =
    pytest
    pytest-cov
    coverage
    black
    mypy
viz =
    pyvista
    matplotlib
